[package]
name = "mazes"
version = "0.1.0"
authors = ["enerqi <enerqi@enerqi>"]
repository = "https://github.com/enerqi/mazes.git"
homepage = "https://github.com/enerqi/mazes.git"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
bit-set = "^0.5.0"
docopt = "^1.0.0"
error-chain = "^0.12.0"
fnv = "^1.0.2"
image = "^0.20.0"
itertools = "^0.7.0"
lazy_static = "^1.1.0"
num = "^0.2.0"
petgraph = "^0.4.0"
rand = "^0.5.5"
serde = "^1.0"
serde_derive = "^1.0"
smallvec = "^0.6.5"

[dependencies.sdl2]
version = "^0.31.0"
default-features = false
features = ["image", "ttf"]

[dev-dependencies]
criterion = "^0.2.5"
quickcheck = "^0.7.2"

[build-dependencies]
walkdir = "^2.2.6"

[profile.release]
debug = true

[profile.bench]
debug = true

[[bench]]
name = "generators"
harness = false  # disable the libtest benchmark harness so can use criterion instead
path = "./benches/generators.rs"

[[bench]]
name = "grid"
harness = false
path = "./benches/grid.rs"

[[bench]]
name = "masks"
harness = false
path = "./benches/masks.rs"

[[bench]]
name = "pathing"
harness = false
path = "./benches/pathing.rs"

[[bench]]
name = "renderers"
harness = false
path = "./benches/renderers.rs"
