[package]
name = "mazes"
version = "0.1.0"
authors = ["enerqi <enerqi@enerqi>"]
repository = "https://github.com/enerqi/mazes.git"
homepage = "https://github.com/enerqi/mazes.git"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
bit-set = "^0.5"
docopt = "^1.0.0"
error-chain = "^0.12"
fnv = "^1.0.2"
image = "^0.24"
itertools = "^0.10"
lazy_static = "^1.1.0"
num = "^0.4"
petgraph = "^0.6"
rand = {version="^0.8", features=["small_rng"]}
sdl2 = {version="^0.35", default-features = false, features = ["image", "ttf"]}
serde = "^1.0"
serde_derive = "^1.0"
smallvec = "^1.3"

[dev-dependencies]
criterion = "^0.4"
quickcheck = "^1.0"

[build-dependencies]
walkdir = "^2.3"

[profile.release]
debug = true
lto = true
codegen-units = 1

[profile.bench]
debug = true

[[bench]]
name = "generators"
harness = false  # disable the libtest benchmark harness so can use criterion instead
path = "./benches/generators.rs"

[[bench]]
name = "grid"
harness = false
path = "./benches/grid.rs"

[[bench]]
name = "masks"
harness = false
path = "./benches/masks.rs"

[[bench]]
name = "pathing"
harness = false
path = "./benches/pathing.rs"

[[bench]]
name = "renderers"
harness = false
path = "./benches/renderers.rs"
